fixed bug w dark mode, added red

--- a/frontend/src/assets/nav-header.scss
+++ b/frontend/src/assets/nav-header.scss
@@ -12,17 +12,12 @@
         }
     }
 }
-.router-link-exact-active {
-    a {
-        border-bottom: solid 1px $gray;
-    }
-}
 .nav-items {
     display: block;
     margin: 15px 0 15px auto;
 }
 hr {
     border: 0;
-    width: 96%;
+    width: 80%;
     height: 1px;
 }
