--- a/frontend/src/assets/variables.scss
+++ b/frontend/src/assets/variables.scss
@@ -2,12 +2,12 @@ $black: rgb(51, 51, 51);
 $gray: rgb(85, 85, 85);
 $botticelli: rgb(154, 164, 175);
 $hacienda: rgb(158, 117, 32);
-$blue-0: rgb(0, 123, 255);
-$blue-1: rgb(0, 123, 255);
-$blue-2: rgb(64, 157, 252);
-$blue-3: rgb(111, 180, 250);
+$blue: rgb(0, 123, 255);
+$blue-fade: rgb(111, 180, 250);
+$red: rgb(244, 42, 82);
+$yellow: rgb(208, 169, 11);
 
 $blackpearl: rgb(24, 30, 36);
-$whitesmoke: rgb(247, 247, 247);
+$whitesmoke: rgb(250, 250, 250);
 
 $break-large: 768px
